# Deck.Rust

./: .gitignore  Cargo.toml
migrations/2022-03-04-104110_models/: down.sql  up.sql
src/: config.rs  db.rs  errors.rs  main.rs  response.rs  schema.rs  services.rs  tests.rs  web_methods.rs
src/models/: app_state.rs  card.rs  card_db.rs  card_decks.rs  card_type.rs  deck.rs  mod.rs  suit.rs
src/shuffles/: hand_shuffle.rs  mod.rs
