[package]
name = "deck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
actix-web = "3"
dotenv = "0.15.0"
diesel_migrations = "1.4.0"
diesel = { version = "1.4.8", features = ["postgres"] }
serde_json = "1"
rand = "0.8.5"
